@@ -1,5 +1,6 @@
 --- CHANGELOG ---
 --- Assimulo-FUTURE---
+    * Fixed issue with 'report_continuously = True' for backwards simulation.
 
 --- Assimulo-3.7.1---
     * Fixed error messages from uninitialized internal memory for CVode when using `iter = 'FixedPoint'`.
